<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">WebcamRoombaController</string>
    <string name="quit">Quit</string>
    <string name="spinleft">Spin Left</string>
    <string name="spinright">Spin Right</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="pause">Pause Video</string>
    <string name="stop">Stop</string>
    <string name="ip">IP Address</string>
    <string name="port">Port Number</string>
    <string name="submit">Submit</string>

</resources>