<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.56"
        android:orientation="vertical" >

        <SurfaceView
            android:id="@+id/surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="0.4" >
        </SurfaceView>

        <TableLayout
            android:id="@+id/gridLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:columnCount="3"
            android:orientation="horizontal"
            android:paddingRight="2dip"
            android:rowCount="3" >

            <TableRow>

                <Space
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/forwardButton"
                   
                    android:layout_row="0"                    
                    android:layout_weight="1"
                    android:onClick="forwardButtonListener"
                    android:text="@string/forward" />

                <Space
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow android:baselineAligned="false" >

                <Button
                    android:id="@+id/spinLeftButton"
                    android:layout_width="match_parent"
                    android:layout_column="0"
                    android:layout_columnSpan="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="1"
                    android:layout_rowSpan="1"
                    android:layout_weight="1"
                    android:onClick="spinLeftButtonListener"
                    android:text="@string/spinleft" />

                <Button
                    android:id="@+id/stopButton"
                    android:layout_column="1"
                    android:layout_columnSpan="1"
                    android:layout_row="1"
                    android:layout_rowSpan="1"
                    android:layout_weight="1"
                    android:text="@string/stop" />

                <Button
                    android:id="@+id/spinRightButton"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:layout_weight="1"
                    android:onClick="spinRightButtonListener"
                    android:text="@string/spinright" />
            </TableRow>

            <TableRow>

                <Space
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/backwardButton"
                    android:layout_column="1"
                    android:layout_columnSpan="1"
                    android:layout_row="2"
                    android:layout_rowSpan="1"
                    android:layout_weight="1"
                    android:onClick="backwardButtonListener"
                    android:text="@string/backward" />

                <Space
                    android:layout_column="2"
                    android:layout_row="0"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill" >

            <Button
                android:id="@+id/pauseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pauseButtonListener"
                android:text="@string/pause" />

            <Button
                android:id="@+id/quitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="quitButtonListener"
                android:text="@string/quit" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>